--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>U.CARE</title>
+    <title>E.HAIR</title>
 
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
